@@ -1,3 +1,7 @@
+shmuel 2025-11-18 21:30:58+02:00 - build 905
+
+1. LuaFAR: add method 'write' to user control.
+
 shmuel 2025-11-13 20:17:29+02:00 - build 904
 
 1. Adapt to the change in binary string representation made in build 898.
